<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.chromium.chrome.browser.ntp.IncognitoNewTabPageViewMD
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chrome="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ntp_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/tab_strip_height" >

    <include layout="@layout/new_tab_page_incognito_md_common"/>

</org.chromium.chrome.browser.ntp.IncognitoNewTabPageViewMD>
