<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.chromium.chrome.browser.signin.SigninPromoView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signin_promo_view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="12dp">

    <include layout="@layout/signin_promo_view_impl"/>

</org.chromium.chrome.browser.signin.SigninPromoView>