<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<org.chromium.chrome.browser.ntp.snippets.SectionHeaderView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/snippets_article_header_height"
    android:orientation="horizontal"
    android:paddingStart="@dimen/card_padding"
    android:gravity="center_vertical"
    android:layoutDirection="locale">

    <!-- Note: Setting textDirection to "locale" makes sure that a non-translated English word in
         the title text view is aligned based on the device locale and not the text content.
    -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.TextAccentMediumThick.Secondary"
        android:textDirection="locale" />

    <org.chromium.components.browser_ui.widget.listmenu.ListMenuButton
        android:id="@+id/header_menu"
        android:layout_width="@dimen/snippets_article_header_menu_size"
        android:layout_height="@dimen/snippets_article_header_menu_size"
        android:scaleType="fitXY"
        android:padding="15dp"
        android:background="@null"
        android:src="@drawable/ic_settings_gear_24dp"
        android:contentDescription="@string/accessibility_ntp_feed_menu_button"
        app:menuMaxWidth="@dimen/feed_header_menu_max_width"
        app:tint="@color/default_icon_color_tint_list" />
</org.chromium.chrome.browser.ntp.snippets.SectionHeaderView>
